force-app/main/default/objects/Complaint__c/Complaint__c.object-meta.xml
<CustomObject>
    <label>Complaint</label>
    <nameField>
        <displayFormat>CMP-{0000}</displayFormat>
        <label>Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>