force-app/main/default/objects/Complaint__c/fields/AI_Classification__c.field-meta.xml
<CustomField>
    <fullName>AI_Classification__c</fullName>
    <label>AI Classification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>